src/test/deca/context/invalid/tests/CurrentClassNotSubClassSelection.deca
// Description:
//       Teste de selection d'un Field protected .
// 
// Resultats: 
//      Ligne 18:La classe B doit être un sous-classes de A où est défini le champs x 
//	et la A doit être doit être un sous classe de B
// 
// Historique:
//      cree le 21/01/2023
class A{
 protected int x;
}

class B{
  A a = new A();
  void modify(){
  // Erreur car B n'est pas un fils de A
      a.x = 2;
  }
}
